# rspack

./: Cargo.toml  pnpm-lock.yaml
crates/node_binding/: Cargo.toml  binding.d.ts
crates/node_binding/src/: lib.rs
crates/rspack_allocator/: Cargo.toml
crates/rspack_binding_options/: Cargo.toml
crates/rspack_binding_options/src/options/: raw_snapshot.rs
crates/rspack_binding_options/src/options/raw_builtins/: mod.rs  raw_swc_dts_emit.rs
crates/rspack_binding_options/src/plugins/js_loader/: context.rs
crates/rspack_core/: Cargo.toml
crates/rspack_core/src/: concatenated_module.rs  lib.rs  module.rs  normal_module.rs  normal_module_factory.rs
crates/rspack_core/src/cache/: mod.rs
crates/rspack_core/src/cache/snapshot/: mod.rs  option.rs  strategy.rs
crates/rspack_core/src/cache/storage/: mod.rs  test.rs
crates/rspack_core/src/compiler/: compilation.rs  hmr.rs  mod.rs
crates/rspack_core/src/compiler/make/repair/: build.rs  mod.rs
crates/rspack_core/src/compiler/module_executor/: mod.rs
crates/rspack_core/src/options/: snapshot.rs
crates/rspack_error/: Cargo.toml
crates/rspack_loader_runner/src/: runner.rs
crates/rspack_loader_swc/: Cargo.toml
crates/rspack_loader_swc/src/: lib.rs  plugin.rs
crates/rspack_plugin_emit_dts/: Cargo.toml
crates/rspack_plugin_emit_dts/src/: plugin.rs
crates/rspack_plugin_javascript/src/parser_and_generator/: mod.rs
crates/rspack_plugin_wasm/: Cargo.toml
crates/rspack_storage/src/: lib.rs
crates/rspack_storage/src/pack/: meta.rs  mod.rs  pack.rs  scope.rs  storage.rs
crates/rspack_tracing/src/: chrome.rs  lib.rs  opentelemetry.rs  stdout.rs  tokio_console.rs  tracer.rs
