[package]
description = "rspack allocator"
edition     = "2021"
license     = "MIT"
name        = "rspack_allocator"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "aarch64"), not(target_env = "musl")))'.dependencies]
mimalloc = { workspace = true }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
# Turned on `local_dynamic_tls` to avoid issue: https://github.com/microsoft/mimalloc/issues/147
mimalloc = { workspace = true, features = ["local_dynamic_tls"] }
