[package]
description = "rspack builtin swc loader"
edition     = "2021"
license     = "MIT"
name        = "rspack_loader_swc"
repository  = "https://github.com/web-infra-dev/rspack"
version     = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
plugin = [
  "swc_core/plugin_transform_host_native",
  "swc_core/plugin_transform_host_native_filesystem_cache",
  "swc_core/plugin_transform_host_native_shared_runtime",
]

[dependencies]
anyhow                   = { workspace = true }
async-trait              = { workspace = true }
base64                   = { version = "0.22" }
dashmap                  = { workspace = true }
either                   = { workspace = true }
glob                     = { workspace = true }
jsonc-parser             = { version = "0.26.0", features = ["serde"] }
rspack_ast               = { version = "0.1.0", path = "../rspack_ast" }
rspack_core              = { version = "0.1.0", path = "../rspack_core" }
rspack_error             = { version = "0.1.0", path = "../rspack_error" }
rspack_hook              = { version = "0.1.0", path = "../rspack_hook" }
rspack_loader_runner     = { version = "0.1.0", path = "../rspack_loader_runner" }
rspack_paths             = { version = "0.1.0", path = "../rspack_paths" }
rspack_plugin_emit_dts   = { version = "0.1.0", path = "../rspack_plugin_emit_dts" }
rspack_plugin_javascript = { version = "0.1.0", path = "../rspack_plugin_javascript" }
rspack_util              = { version = "0.1.0", path = "../rspack_util" }
rustc-hash               = { workspace = true }
serde                    = { workspace = true, features = ["derive"] }
serde_json               = { workspace = true }
stacker                  = { workspace = true }
swc_config               = { workspace = true }
swc_core                 = { workspace = true, features = ["base", "ecma_ast", "common"] }
swc_plugin_import        = { version = "0.1.5", path = "../swc_plugin_import" }
swc_typescript           = { workspace = true }
tokio                    = { workspace = true }
url                      = "2.5.0"
